# kchat

./: README.md  pyproject.toml
src/kchat/: cli.py
src/kchat/kafka/: chat.py  con.py  pchat.py  pro.py  proAndcon.py  proAndcon2.py
