[project]
name = "kchat"
version = "0.2.0"
description = "Python chat program using Apache Kafka"
authors = [
    {name = "tbongkim03", email = "tbongkim03@gmial.com"},
]
dependencies = [
    "kafka-python>=2.0.2",
    "tqdm>=4.66.5",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
]

[tool.pyetest.ini_options]
pythonpath = 'src'

[project.scripts]
kchat-ping = 'kchat.cli:ping'
